# LidarNode

ground_removal/: CMakeLists.txt  package.xml
ground_removal/include/: ground_plane_fitting.h
ground_removal/src/: ground_plane_fitting.cpp
lidar_node/: CMakeLists.txt  package.xml
lidar_node/config/: Ground_removal.yaml  Lidar_node.yaml
lidar_node/include/: lidar_node.hpp
lidar_node/launch/: lidar.launch.py
lidar_node/src/: lidar_node.cpp
